[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["omee <wasif.omee@mbm.group>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
jinja2 = "^3.1.4"
matplotlib = "^3.9.2"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
